objects/FieloCH__MissionChallenge__c.object
<CustomObject>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>MissionsChallenge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>FieloCH__Mission__c</referenceTo>
        <relationshipLabel>Missions Challenge</relationshipLabel>
        <relationshipName>MissionsChallenge</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloCH__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mission Challenge</label>
    <nameField>
        <displayFormat>MCH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missions Challenge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>